-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8265233 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8265224 | 11.0.12 | Jiangli Zhou | P3 | Resolved | Fixed | b01 |
The test fails with following error when running on a JDK binary with default CDS archive:
java.lang.RuntimeException: Load factor too high, expected MAX 5.0, got 467.30841121495325 [table size 107, number of clases 50002]
at TestResize.analyzeOutputOn(TestResize.java:99)
at TestResize.main(TestResize.java:124)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:229)
at java.base/java.lang.Thread.run(Thread.java:834)
java.lang.RuntimeException: Load factor too high, expected MAX 5.0, got 467.30841121495325 [table size 107, number of clases 50002]
at TestResize.analyzeOutputOn(TestResize.java:99)
at TestResize.main(TestResize.java:124)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:229)
at java.base/java.lang.Thread.run(Thread.java:834)
- backported by
-
JDK-8265224 runtime/LoadClass/TestResize.java fails with "Load factor too high" when running in CDS mode
-
- Resolved
-
-
JDK-8265233 runtime/LoadClass/TestResize.java fails with "Load factor too high" when running in CDS mode
-
- Resolved
-
- blocks
-
JDK-8202951 Implementation of JEPJDK-8204247: Include default CDS (Class Data Sharing) archive in JDK binary
-
- Resolved
-
- relates to
-
JDK-8202951 Implementation of JEPJDK-8204247: Include default CDS (Class Data Sharing) archive in JDK binary
-
- Resolved
-