8208061: runtime/LoadClass/TestResize.java fails with "Load factor too high" when running in CDS mode

Allow resizing for all system dictionaries except for the shared dictionary at runtime.

Reviewed-by: iklam, gziemski